<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="noteSelected"
            type="com.example.mynotekeeper.dataclasses.Note" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@{@string/note_course(noteSelected.note_course)}"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="course" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            tools:text="Title"
            android:textSize="25sp"
            android:text="@{@string/note_title(noteSelected.note_title)}"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/detail_course"
            app:layout_constraintStart_toStartOf="@+id/detail_course"
            app:layout_constraintTop_toBottomOf="@+id/detail_course" />

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            tools:text="Text"
            android:textSize="20sp"
            android:text="@{@string/note_text(noteSelected.note_text)}"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/detail_title"
            app:layout_constraintStart_toStartOf="@+id/detail_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="33dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:foregroundTint="@color/pluralsight_orange"
            android:backgroundTint="@color/colorPrimary"
            android:foreground="@drawable/ic_assignment_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>