...

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/navigation_drawer"
        tools:openDrawer="start"

        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navGraph="@navigation/navigation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:background="#CDAAB1B6"
            app:itemTextColor="#ffff"
             app:itemIconSize="30dp"
            app:headerLayout="@layout/header_navigation"
...
