<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listItemViewModel"
            type="com.example.mynotekeeper.viewmodel.ListItemViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            tools:listitem="@layout/item_list"
            tools:itemCount="16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="#FADFCDCD"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            style="@style/addFab"
            android:layout_margin="4dp"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->listItemViewModel.onFabListener()}"
           />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>